# LightLogWriteImplWithPanel

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  LightLogWriteImplWithPanel.sln  LightLogWriteImplWithPanel.vcxproj  LightLogWriteImplWithPanel.vcxproj.filters  README.md  RELEASE_READINESS_REPORT.md  ROTATION_IMPLEMENTATION_REPORT.md  TODO.md  main.cpp
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LightLogConfig.cmake  Makefile  cmake_install.cmake
cmake/: LightLogConfig.cmake.in
config/: example_filter_config.json  example_multioutput_config.json
dev-log/: dev.md  thread_pool_migration.md  🔍 预留但未实现的接口清单.md
docs/: cmake_build_guide.md  debug_system_guide.md  enhanced_filter_system.md  filter_serialization_guide.md  multioutput_json_config_guide.md  rotation_strategy_api.md  rotation_strategy_guide.md  rotation_system_upgrade.md
example_usage/: CMakeLists.txt  README.md  main.cpp
examples/: demo_main.cpp  filter_serialization_demo.cpp  filter_system_demo.cpp  multioutput_json_config_demo.cpp  rotation_compression_examples.cpp  rotation_configuration_examples.cpp  rotation_demo.cpp  rotation_strategy_examples.cpp  simple_demo.cpp
include/BS/: BS_thread_pool.hpp
include/log/: AsyncRotationManager.h  BaseLogOutput.h  BasicLogFormatter.h  CompositeFilter.h  ConsoleLogOutput.h  DebugUtils.h  FileLogOutput.h  FilterManager.h  ICompositeFilter.h  IFilterManager.h  ILogCompressor.h  ILogFilter.h  ILogFormatter.h  ILogOutput.h  ILogRotationManager.h  IRotationStrategy.h  LightLogWriteImpl.h  LogCommon.h  LogCompressor.h  LogFilterFactory.h  LogFilters.h  LogOutputManager.h  LogRotationManager.h  MultiOutputLogConfig.h  PerformanceProfiler.h  RotationErrorHandler.h  RotationManagerFactory.h  RotationPreChecker.h  RotationStateMachine.h  RotationStrategies.h  TimeCalculator.h  TransactionalRotation.h  UniConv.h  UniConvAdapter.h  singleton.h
include/miniz/: zip_file.hpp
src/log/: AsyncRotationManager.cpp  BaseLogOutput.cpp  BasicLogFormatter.cpp  CompositeFilter.cpp  ConsoleLogOutput.cpp  FileLogOutput.cpp  FilterManager.cpp  LightLogWriteImpl.cpp  LogCompressor.cpp  LogFilterFactory.cpp  LogFilters.cpp  LogOutputManager.cpp  MultiOutputLogConfig.cpp  RotationErrorHandler.cpp  RotationManagerFactory.cpp  RotationManagerFactory.cpp.backup  RotationPreChecker.cpp  RotationStateMachine.cpp  RotationStrategies.cpp  TimeCalculator.cpp  TransactionalRotation.cpp  UniConv.cpp
test/: test_compressor.cpp  test_rotation.cpp
